GPC/tests/examples/fail/constructArray3.gpc


GPRM::Kernel::Test a[3];
GPRM::Kernel::Test a[3];

int GPRM::Test::constructArray3() {
    return 0;
}
